Update and rename image-1.markdown to 2016-07-14-image-1.markdown

--- a/_posts/2016-07-14-image-1.markdown
+++ b/_posts/2016-07-14-image-1.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Reinhardt Family!"
+title:  "Image 1"
 image: /images/reinhardt-family-1.jpg 
 caption: Reinhardt Family
 date:   2016-07-14
